fix overflow issue on mobile

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,6 +5,10 @@ canvas {
 
 header {
     position: relative;
+    margin-top: 17%;
+    @include desktop {
+        margin-top: 0;
+    }
     section {
         position: absolute;
         top: 50%;
