--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,3 +15,9 @@ canvas {
 nav {
     overflow-x: hidden;
 }
+
+.main {
+    position: relative;
+    display: block;
+    overflow-x: hidden;
+}
